dark mode fixing

--- a/src/main.css
+++ b/src/main.css
@@ -352,14 +352,6 @@ body {
   color: #f1f1f1;
 }
 
-.sidenav .closebtn {
-  /* position: absolute;
-  top: 0;
-  left: 20px;
-  font-size: 36px; */
-  /* margin-left: 50px; */
-}
-
 @media screen and (max-height: 450px) {
   .sidenav {
     padding-top: 40px;
@@ -883,6 +875,12 @@ h6 {
   background: rgba(255, 255, 255, 0.351);
   /* color: black !important; */
   /* border-radius: 5px 5px 0px 0px; */
+}
+.dark-theme .top-bar a.active {
+  background:  rgb(46, 46, 46);
+}
+.dark-theme .hyusa {
+  border: 2px solid rgb(76, 76, 76) !important;
 }
 
 .top-bar .tab .imgg {
